--- a/index.css
+++ b/index.css
@@ -1,10 +1,22 @@
+body{
+    
+  background: #4b6cb7; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #4b6cb7, #182848); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #4b6cb7, #182848); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: Courier New, monospace;
+}
 .card{
     background-color: white;
-    border:1px solid #333;
     border-radius:.5em;
-    padding:.5em;
-    max-width:300px;
+    padding:1em;
+    max-width:320px;
     margin: 0 auto;
+    /* box-shadow: rgb(124, 122, 129) 0px 15px 25px, rgba(241, 239, 239, 0.05) 0px 5px 10px; */
+}
+.progress-bar-container{
+    max-width:410px;
+    margin: 0 auto;
+
 }
 .form-group{
     display:flex;
@@ -22,15 +34,85 @@ margin:0;
     font-weight: bold;
     color:#333;
 }
-
 .form-group > input{
+    
     border:1px solid #333;
     border-radius:.25em;
     font-size: 1rem;
-    padding:.25em;
+    padding:.5em;
 }
 .step-title{
+
     margin: 0;
     margin-bottom:1rem;
     text-align:center;
+}
+
+.button-div > button{
+    background-color:#ff9a76;
+    color:white;
+    border:none;
+    width:40%;
+    padding:10px;
+    border-radius: 80px;
+}
+.button-div{
+    display:flex;
+    justify-content:center;
+}
+::placeholder {
+    font-size: 12px;
+  }
+
+  /*progressbar*/
+#progressbar {
+	margin-bottom: 30px;
+	overflow: hidden;
+	/*CSS counters to number the steps*/
+	counter-reset: step;
+    margin-left: -10%;
+}
+#progressbar li {
+	list-style-type: none;
+	color: white;
+	text-transform: uppercase;
+	font-size: 9px;
+	width: 33.33%;
+	float: left;
+    text-align: center;
+	position: relative;
+}
+#progressbar li:before {
+	content: counter(step);
+	counter-increment: step;
+	width: 20px;
+	line-height: 20px;
+	display: block;
+	font-size: 10px;
+	color: #333;
+	background: white;
+    text-align: center;
+	border-radius: 3px;
+	margin: 0 auto 5px auto;
+}
+/*progressbar connectors*/
+#progressbar li:after {
+	content: '';
+	width: 100%;
+	height: 2px;
+	background: white;
+	position: absolute;
+	left: -50%;
+	top: 9px;
+	z-index: -1; /*put it behind the numbers*/
+}
+#progressbar li:first-child:after {
+	/*connector not needed before the first step*/
+	content: none; 
+}
+/*marking active/completed steps green*/
+/*The number of the step and the connector before it = green*/
+#progressbar li.active:before,  #progressbar li.active:after{
+	background: #ff9a76;
+	color: white;
 }
